@@ -36,12 +36,22 @@
 		</repository>
 	</repositories>
 
+	<pluginRepositories>
+		<pluginRepository>
+			<id>xeo</id>
+			<url>https://code.xeomar.com/repo/xeo</url>
+		</pluginRepository>
+	</pluginRepositories>
+
 	<properties>
 		<project.timestamp>${maven.build.timestamp}</project.timestamp>
 		<product-name>${project.name}</product-name>
 		<product-identifier>annex</product-identifier>
+
+		<!-- Runtime dependencies -->
+		<javafx.version>11</javafx.version>
+		<controlsfx.version>8.40.14</controlsfx.version>
 		<commonsio.version>2.6</commonsio.version>
-		<javafx.version>11-ea-18</javafx.version>
 		<slf4j.version>1.8.0-beta2</slf4j.version>
 	</properties>
 
@@ -53,26 +63,11 @@
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
 
-		<!--<dependency>-->
-			<!--<groupId>commons-io</groupId>-->
-			<!--<artifactId>commons-io</artifactId>-->
-			<!--<version>${commonsio.version}</version>-->
-		<!--</dependency>-->
-
-		<!-- Wait for Java 11 and OpenJFX to be more mature -->
-		<!--
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
-			<version>11-ea+19</version>
+			<version>${javafx.version}</version>
 		</dependency>
-
-		<dependency>
-			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-graphics</artifactId>
-			<version>11-ea+19</version>
-		</dependency>
-		-->
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -97,7 +92,7 @@
 				<artifactId>maven-dependency-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>copy</id>
+						<id>copy-dependencies</id>
 						<phase>prepare-package</phase>
 						<goals>
 							<goal>copy-dependencies</goal>
@@ -111,24 +106,36 @@
 			</plugin>
 
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.6.0</version>
+				<groupId>com.xeomar</groupId>
+				<artifactId>snare</artifactId>
+				<version>1.0-SNAPSHOT</version>
 				<executions>
 					<execution>
+						<id>patch-dependencies</id>
 						<phase>prepare-package</phase>
 						<goals>
-							<goal>exec</goal>
+							<goal>patch</goal>
 						</goals>
 						<configuration>
-							<executable>bash</executable>
-							<arguments>
-								<argument>${project.basedir}/source/tool/module-patch.sh</argument>
-								<!--<argument>${project.build.directory}/dependency/commons-io.jar</argument>-->
-								<!--<argument>${project.build.directory}/dependency/undofx.jar</argument>-->
-								<!--<argument>${project.build.directory}/dependency/jackson-annotations.jar</argument>-->
-								<!--<argument>${project.build.directory}/dependency/jackson-databind.jar</argument>-->
-							</arguments>
+							<modulePath>${project.build.directory}/dependency</modulePath>
+							<jars>
+								<jar>
+									<name>commons-io.jar</name>
+								</jar>
+								<jar>
+									<name>jackson-core.jar</name>
+								</jar>
+								<jar>
+									<name>jackson-annotations.jar</name>
+								</jar>
+								<jar>
+									<name>jackson-databind.jar</name>
+									<modules>
+										<module>com.fasterxml.jackson.core</module>
+										<module>com.fasterxml.jackson.annotation</module>
+									</modules>
+								</jar>
+							</jars>
 						</configuration>
 					</execution>
 				</executions>
@@ -181,6 +188,40 @@
 				</configuration>
 			</plugin>
 			-->
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.5.0</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>${java.home}/bin/jlink</executable>
+							<arguments>
+								<argument>--module-path</argument>
+								<argument>${jlink.module.path}</argument>
+								<argument>--add-modules</argument>
+								<argument>com.xeomar.annex</argument>
+								<argument>--output</argument>
+								<argument>${basedir}/target/jlink</argument>
+								<argument>--launcher</argument>
+								<argument>annex=com.xeomar.annex/com.xeomar.annex.Program</argument>
+
+								<argument>--strip-debug</argument>
+								<argument>--no-header-files</argument>
+								<argument>--no-man-pages</argument>
+								<!-- Valid value: 0, 1, 2 -->
+								<argument>--compress</argument>
+								<argument>2</argument>
+							</arguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 
 		</plugins>
 
